--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -5,7 +5,8 @@
     border-radius: 2px;
     box-shadow: 0 0 20px 2px rgba(0, 0, 0, 0.5);
     display: grid;
-    grid-template: 1fr 8fr / 3fr 1fr;
+    grid-template: 1fr 8fr / 1fr 3fr;
+    font-family: 'Barlow', sans-serif;
 }
 
 .preview-header {
@@ -16,7 +17,6 @@
     align-items: flex-end;
     gap: 1rem;
     color: white;
-    font-family: 'Barlow', sans-serif;
 }
 
 .preview-header p {
@@ -29,15 +29,27 @@
 
 .preview-aside {
     background: #eaebea;
-    grid-area: 2 / 2 / 3 / 3;
+    grid-area: 2 / 1 / 3 / 2;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 0.5rem;
+    padding: 1.5rem 0;
 }
 
+.personal-details {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    font-size: 1.2rem;
+    width: 100%;
+    align-items: center;
+}
+
+
+
 .preview-main {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 2 / 2 / 3 / 3;
     display: grid;
     grid-template-rows: repeat(3, 1fr);
     justify-items: center;
