--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -51,33 +51,57 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.6rem;
-    padding: 1rem 1.2rem;
+    gap: 0.4rem;
+    padding: 0.4rem 1.2rem;
+}
+
+.preview-main h3 {
+    margin: 1rem 0 0 0;
+    font-size: 1.4rem;
 }
 
 .description {
     text-align: center;
+    font-family: 'Roboto', sans-serif;
 }
 
 .educations {
+    width: 100%;
     display: flex;
+    justify-content: space-around;
     gap: 0.6rem;
 }
 
 .educations div {
-    border: 1px solid red;
+    position: relative;
     display: flex;
     flex-direction: column;
-    gap: 0.2rem;
+    justify-content: space-between;
+    gap: 0.3rem;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
 }
 
 .educations div:hover > .delete-education {
     opacity: 1;
 }
 
+.school-name {
+    font-size: 1.2rem;
+}
+
+.study-title {
+    font-weight: bold;
+}
+
 .delete-education {
+    background: transparent;
     border: none;
     opacity: 0;
+    position: absolute;
+    top: 50%;
+    right: -35px;
+    transform: translateY(-50%);
 }
 
 .delete-education:hover {
