--- a/src/styles/editor.css
+++ b/src/styles/editor.css
@@ -53,13 +53,19 @@
 button {
     outline: none;
     cursor: pointer;
-    padding: 6px 12px;
+    padding: 8px 12px;
     background: white;
     border: 1px solid rgb(150, 150, 150);
     border-radius: 4px;
     font-size: 1.2rem;
 }
 
+.add-skill i,
+.add-education i {
+    margin-left: 0.5rem;
+}
+
+.add-skill:hover,
 .add-education:hover {
     background: rgb(46, 202, 46);
     color: #eaebea;
