--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -10,7 +10,7 @@
 }
 
 .preview-header {
-    background: rgb(14, 35, 82);
+    background: rgb(26, 73, 117);
     grid-area: 1 / 1 / 2 / 3;
     padding: 2rem 2rem;
     display: flex;
@@ -33,8 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
-    padding: 1.5rem 0;
+    padding: 1.5rem 0.5rem;
 }
 
 .personal-details {
@@ -44,6 +43,33 @@
     font-size: 1.2rem;
     width: 100%;
     align-items: center;
+    font-family: 'Roboto', sans-serif;
+    word-break: break-all;
+    text-align: center;
+}
+
+.preview-aside h3 {
+    margin: 2rem 0 1rem 0;
+    font-size: 1.5rem;
+}
+
+.skills {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.skill {
+    font-size: 1.2rem;
+}
+
+.skill i {
+    cursor: pointer;
+    margin-left: 0.4rem;
+}
+
+.skill i:hover {
+    color: crimson;
 }
 
 .preview-main {
