--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -39,13 +39,17 @@
 .personal-details {
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
+    gap: 0.3rem;
     font-size: 1.2rem;
     width: 100%;
     align-items: center;
     font-family: 'Roboto', sans-serif;
     word-break: break-all;
     text-align: center;
+}
+
+.personal-details h4 {
+    margin-top: 0.6rem;
 }
 
 .preview-aside h3 {
@@ -89,7 +93,7 @@
 }
 
 .preview-main h3 {
-    margin: 1rem 0 0 0;
+    margin: 1rem 0 0.3rem 0;
     font-size: 1.4rem;
 }
 
@@ -127,8 +131,64 @@
     font-weight: bold;
 }
 
-.delete-skill,
+.work-experiences {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.job {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.job-details {
+    font-size: 1.1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.job-position {
+    font-weight: bold;
+}
+
+.job-company {
+    color: #555555;
+}
+
+.job-dates {
+    font-style: italic;
+}
+
+.job-duties {
+    text-align: center;
+}
+
+.job:hover > .delete-work-experience {
+    opacity: 1;
+}
+
+.delete-education,
+.delete-work-experience {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .delete-education {
+    bottom: -20px;
+}
+
+.delete-work-experience {
+    bottom: -25px;
+}
+
+.delete-skill,
+.delete-education,
+.delete-work-experience {
     cursor: pointer;
     font-size: 1.2rem;
     background: transparent;
@@ -137,13 +197,7 @@
 }
 
 .delete-skill:hover,
-.delete-education:hover {
+.delete-education:hover,
+.delete-work-experience:hover {
     color: crimson;
-}
-
-.delete-education {
-    position: absolute;
-    bottom: -20px;
-    left: 50%;
-    transform: translateX(-50%);
 }
