--- a/src/styles/preview.css
+++ b/src/styles/preview.css
@@ -1,5 +1,5 @@
 .cv-preview {
-    width: 50vw;
+    width: 50%;
     background: white;
     margin: 3rem auto;
     border-radius: 2px;
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 3rem 1rem;
+    padding: 3rem 2rem;
 }
 
 .personal-details {
@@ -61,7 +61,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 0 0.6rem 0 1rem;
+    width: 100%;
 }
 
 .skill {
@@ -89,7 +89,7 @@
     flex-direction: column;
     align-items: center;
     gap: 0.4rem;
-    padding: 0.4rem 1.2rem;
+    padding: 0.4rem 1.2rem 1.2rem 1.2rem;
 }
 
 .preview-main h3 {
@@ -123,13 +123,14 @@
     opacity: 1;
 }
 
-.school-name {
-    color: #333333;
-}
-
 .study-title {
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+.school-name {
+    color: #333333;
+    font-size: 1.1rem;
 }
 
 .work-experiences {
@@ -202,4 +203,22 @@
 .delete-education:hover,
 .delete-work-experience:hover {
     color: crimson;
+}
+
+@media (max-width: 1400px) {
+    .cv-preview {
+        width: 65%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .cv-preview {
+        width: 75%;
+    }
+}
+
+@media (max-width: 1000px) {
+    .cv-preview {
+        width: 90%;
+    }
 }
